# discord-embed-bot

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  discord_embed_bot.service  install.sh  package-lock.json  package.json  tiktok.json  update.sh
src/: cmd.rs  config.rs  discord.rs  ffprobe.rs  github.rs  logging.rs  main.rs  tiktok.rs  util.rs  yt_dlp.rs
src/tiktok/: mod.rs  tiktok.py
