[package]
name = "discord-embed-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
fs2 = "0.4"
sha2 = "0.10"
log = "0.4"
pretty_env_logger = "0.5"
serenity = { version = "0.12", features = ["collector"] }
regex = "1"
parking_lot = "0.12"
