[package]
name = "discord-embed-bot"
version = "0.1.0"
edition = "2021"
description = "Discord Bot that fixes embeds to websites that don't provide video embeds"
authors = ["William Venner <william@venner.io>"]
repository = "https://github.com/WilliamVenner/discord-embed-bot"
publish = false

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.5"
serenity = { version = "0.12", features = ["collector"] }
regex = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = [
	"json",
	"rustls-tls-native-roots",
	"gzip",
	"deflate",
	"brotli",
], default-features = false }
